genium/src/test/resources/smoke/errors/output/android/com/example/smoke/SomeTypeCollectionError.java
/*
 *
 * Automatically generated. Do not modify. Your changes will be lost.
 */

package com.example.smoke;

public enum SomeTypeCollectionError {
    ERROR_A(0),
    ERROR_B(1);

    public final int value;

    SomeTypeCollectionError(final int value) {
        this.value = value;
    }
}